<resources>
    <string name="app_name">Project01</string>
    <string name="heading">Lets Sign you in</string>
    <string name="welcome">Welcome Back,
            you have been missed</string>
    <string name="emailhint">Email, Phone &amp; Username</string>
    <string name="pass">Password</string>
    <string name="forgotpass">Forgot Password?</string>
    <string name="btn1">Sign In</string>
    <string name="nothaveanaccount">Don\'t have an account? Register Now</string>

    <string name="heading2">Lets Register
            Account</string>
    <string name="hello">Hello user, you have
        a greatful journey</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phnno">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="haveanaccount">Already have an account? Login</string>


    <string name="title_activity_navigation_drawer">Welcome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>

</resources>