<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="21sp"
    android:padding="12sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading2"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="32sp"
        android:layout_marginBottom="12sp"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:backgroundTint="#fff"
        android:padding="4dp"
        android:layout_margin="10dp"
        android:textAlignment="viewStart"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:backgroundTint="#fff"
        android:padding="4dp"
        android:layout_margin="10dp"
        android:textAlignment="viewStart"/>

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phnno"
        android:backgroundTint="#fff"
        android:padding="4dp"
        android:layout_margin="10dp"
        android:textAlignment="viewStart"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:backgroundTint="#fff"
        android:inputType="numberPassword"
        android:padding="4dp"
        android:layout_margin="10dp"
        android:textAlignment="viewStart"/>


    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmpass"
        android:backgroundTint="#fff"
        android:inputType="numberPassword"
        android:padding="4dp"
        android:layout_margin="10dp"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:backgroundTint="#B74AED"
        android:padding="4dp"
        android:layout_margin="10dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/haveanaccount"/>


</LinearLayout>